Add zip release tools

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 Vanilla version/raw/objects/body_default.txt
 Vanilla version/raw/objects/text/secret_death.txt
 Vanilla version/raw/objects/body_default.txt
+
+/target/
+/temp/
